Adding utility file for bufferfile, filesystem and shader and show the first triangle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ find_package(SDL2 CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 set(OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
-find_package(glad CONFIG REQUIRED)
+find_package(GLEW REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 
 if(MSVC)
 	if (${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "AMD64")
@@ -61,7 +62,8 @@ add_dependencies(CommonLib ShadersCheck)
 target_include_directories(CommonLib PUBLIC "include/")
 target_link_libraries(CommonLib PUBLIC SDL2::SDL2 SDL2::SDL2main)
 target_link_libraries(CommonLib PUBLIC imgui::imgui)
-target_link_libraries(CommonLib PUBLIC glad::glad)
+target_link_libraries(CommonLib PUBLIC fmt::fmt)
+target_link_libraries(CommonLib PUBLIC GLEW::GLEW)
 target_link_libraries(CommonLib PUBLIC ${OPENGL_LIBRARIES})
 
 file(GLOB_RECURSE main_files main/*.cpp)
