--- a/common/gl/CMakeLists.txt
+++ b/common/gl/CMakeLists.txt
@@ -13,4 +13,5 @@ target_link_libraries(CommonGL PUBLIC GLEW::GLEW)
 target_link_libraries(CommonGL PUBLIC ${OPENGL_LIBRARIES})
 target_link_libraries(CommonGL PUBLIC Core)
 target_include_directories(CommonGL PUBLIC "include/")
+target_include_directories(CommonGL PUBLIC ${STB_INCLUDE_DIRS})
 set_target_properties(CommonGL PROPERTIES UNITY_BUILD ON)
