Moving all sample into a single executable with unity build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,15 +17,5 @@ add_subdirectory(core)
 add_subdirectory(common/gl)
 add_subdirectory(common/vulkan)
 
-file(GLOB main_folder "main/gl/*")
-foreach(application_folder ${main_folder})
-	if(IS_DIRECTORY ${application_folder})
-		get_filename_component(exe_name ${application_folder} NAME_WE)
-		file(GLOB exe_file ${application_folder}/*.cpp)
-		GENERATEDATA(${application_folder} ${exe_name})
-		
-		add_executable(${exe_name} ${exe_file})
-		add_dependencies(${exe_name} "${exe_name}_DATA")
-		target_link_libraries(${exe_name} PRIVATE CommonGL)
-	endif()
-endforeach()
+
+add_subdirectory(main/gl)
