Correct destroy mechanism and adding warning for missing delete objects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(GPR5300)
 set (CMAKE_CXX_STANDARD 20)
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_compile_definitions(_USE_MATH_DEFINES)
+
 set_property(GLOBAL PROPERTY USE_FOLDERS On)
 
 find_package(SDL2 CONFIG REQUIRED)
