Adding tracy profiler with support of CPU and OpenGL profiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,20 @@
 cmake_minimum_required (VERSION 2.16)
 project(GPR5300)
 
-
 set (CMAKE_CXX_STANDARD 20)
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_compile_definitions(_USE_MATH_DEFINES)
 
+set(TRACY_ENABLE ON CACHE BOOL "")
+
 set_property(GLOBAL PROPERTY USE_FOLDERS On)
+
+if(TRACY_ENABLE)
+    add_compile_definitions(TRACY_ENABLE)
+    set(TRACY_FOLDER "${CMAKE_SOURCE_DIR}/externals/tracy/" CACHE STRING "")
+    include_directories("${TRACY_FOLDER}")
+endif()
 
 find_package(SDL2 CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
@@ -21,3 +28,4 @@ add_subdirectory(common/vulkan)
 
 
 add_subdirectory(main/gl)
+
