--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 find_package(SDL2 CONFIG REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
 file(GLOB_RECURSE CoreFiles src/*cpp include/*.h)
 
 list(APPEND CoreFiles "${TRACY_FOLDER}/TracyClient.cpp" "${TRACY_FOLDER}/Tracy.hpp")
@@ -8,5 +9,5 @@ add_library(Core STATIC ${CoreFiles})
 target_link_libraries(Core PUBLIC fmt::fmt)
 target_include_directories(Core PUBLIC "include/")
 
-target_link_libraries(Core PUBLIC SDL2::SDL2 SDL2::SDL2main)
+target_link_libraries(Core PUBLIC SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only)
 set_target_properties(Core PROPERTIES UNITY_BUILD ON)
