Adding ktx support for 2d texture, change CheckError with glCheckError removing __file__ and __line__ mentions

--- a/common/gl/CMakeLists.txt
+++ b/common/gl/CMakeLists.txt
@@ -5,17 +5,19 @@ set(OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(assimp CONFIG REQUIRED)
+find_package(gli CONFIG REQUIRED)
 
 
 file(GLOB_RECURSE CommonGL_FILES src/* include/*)
 
 list(APPEND CommonGL_FILES "${TRACY_FOLDER}/TracyOpenGL.hpp")
 add_library(CommonGL STATIC ${CommonGL_FILES})
-target_link_libraries(CommonGL PUBLIC imgui::imgui)
-target_link_libraries(CommonGL PUBLIC GLEW::GLEW)
-target_link_libraries(CommonGL PUBLIC assimp::assimp)
-target_link_libraries(CommonGL PUBLIC ${OPENGL_LIBRARIES})
-target_link_libraries(CommonGL PUBLIC Core)
+target_link_libraries(CommonGL PUBLIC Core
+        GLEW::GLEW
+        gli
+        imgui::imgui
+        assimp::assimp
+        ${OPENGL_LIBRARIES})
 target_include_directories(CommonGL PUBLIC "include/")
 target_include_directories(CommonGL PUBLIC ${STB_INCLUDE_DIRS})
 set_target_properties(CommonGL PROPERTIES UNITY_BUILD ON)
