Adding dds texture support with samples

--- a/main/gl/CMakeLists.txt
+++ b/main/gl/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE source_files include/*.h src/*.cpp)
 add_executable(gl_samples ${source_files})
-target_include_directories(gl_samples PUBLIC "include/")
+target_include_directories(gl_samples PRIVATE "include/")
 target_link_libraries(gl_samples PRIVATE CommonGL)
 GENERATEGLDATA(${CMAKE_CURRENT_SOURCE_DIR} gl_samples)
 add_dependencies(gl_samples "gl_samples_DATA")
