Adding the job system and the new main folder for epic game jam

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,5 @@ add_subdirectory(common/vulkan)
 add_subdirectory(main/gl)
 add_subdirectory(main/vk)
 add_subdirectory(main/tools)
+add_subdirectory(main/egj)
 
