Making tracy profiler optional

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,8 +4,9 @@ find_package(spdlog CONFIG REQUIRED)
 find_package(GTest CONFIG REQUIRED)
 
 file(GLOB_RECURSE CoreFiles src/*cpp include/*.h)
-
+if(TRACY_ENABLE)
 list(APPEND CoreFiles "${TRACY_FOLDER}/TracyClient.cpp" "${TRACY_FOLDER}/Tracy.hpp")
+endif()
 add_library(Core STATIC ${CoreFiles})
 
 target_link_libraries(Core PUBLIC fmt::fmt)
