--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
 if (MSVC)
     # warning level 4 and all warnings as errors
-    add_compile_options(/W4 /WX /w14640)
+    add_compile_options(/W4 /w14640)
 else()
     # lots of warnings and all warnings as errors
     add_compile_options(-Wall -Wextra -Wshadow -Wnon-virtual-dtor)
