--- a/common/vulkan/CMakeLists.txt
+++ b/common/vulkan/CMakeLists.txt
@@ -9,3 +9,5 @@ target_link_libraries(CommonVk PUBLIC Core)
 target_include_directories(CommonVk PUBLIC "include/")
 target_include_directories(CommonVk PUBLIC ${STB_INCLUDE_DIRS})
 set_target_properties(CommonVk PROPERTIES UNITY_BUILD ON)
+
+set_target_properties (CommonVk PROPERTIES FOLDER VK)
