--- a/main/tools/CMakeLists.txt
+++ b/main/tools/CMakeLists.txt
@@ -3,3 +3,4 @@ find_package(assimp CONFIG REQUIRED)
 
 add_executable(obj_to_gltf src/obj_to_gltf.cpp)
 target_link_libraries(obj_to_gltf PRIVATE argh assimp::assimp Core)
+set_target_properties (obj_to_gltf PROPERTIES FOLDER Tools)
