--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(GraphicsPlayground)
 set (CMAKE_CXX_STANDARD 20)
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
 if (MSVC)
     # warning level 4 and all warnings as errors
     add_compile_options(/W4 /w14640)
@@ -39,4 +41,5 @@ add_subdirectory(main/gl)
 add_subdirectory(main/vk)
 add_subdirectory(main/tools)
 add_subdirectory(main/vr_playground)
+add_subdirectory(main/rt_playground)
 
