Update graphics playground from Surface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,6 @@ add_subdirectory(common/vulkan)
 add_subdirectory(main/gl)
 add_subdirectory(main/vk)
 add_subdirectory(main/tools)
-add_subdirectory(main/vr_playground)
+#add_subdirectory(main/vr_playground)
 add_subdirectory(main/rt_playground)
 
