--- a/common/vulkan/CMakeLists.txt
+++ b/common/vulkan/CMakeLists.txt
@@ -1,9 +1,11 @@
 find_package(imgui CONFIG REQUIRED)
+find_package(Vulkan)
+find_package(VulkanMemoryAllocator CONFIG REQUIRED)
 
 
 file(GLOB_RECURSE CommonVk_FILES src/* include/*)
 add_library(CommonVk STATIC ${CommonVk_FILES})
-target_link_libraries(CommonVk PUBLIC imgui::imgui)
+target_link_libraries(CommonVk PUBLIC imgui::imgui Vulkan::Vulkan GPUOpen::VulkanMemoryAllocator)
 target_link_libraries(CommonVk PUBLIC Core)
 target_include_directories(CommonVk PUBLIC "include/")
 target_include_directories(CommonVk PUBLIC ${Stb_INCLUDE_DIR})
