Update tracy, correct compilation error and bug with deferred rendering and frustum culling sample

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -5,12 +5,13 @@ find_package(GTest CONFIG REQUIRED)
 find_package(EnTT CONFIG REQUIRED)
 
 file(GLOB_RECURSE CoreFiles src/*cpp include/*.h)
-if(TRACY_ENABLE)
-	list(APPEND CoreFiles "${TRACY_FOLDER}/TracyClient.cpp" "${TRACY_FOLDER}/Tracy.hpp")
-endif()
+
 add_library(Core STATIC ${CoreFiles})
 
 target_link_libraries(Core PUBLIC fmt::fmt)
+if(TRACY_ENABLE)
+	target_link_libraries(Core PUBLIC Tracy::TracyClient)
+endif()
 target_include_directories(Core PUBLIC "include/")
 
 target_link_libraries(Core PUBLIC SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only EnTT::EnTT glm::glm)
